--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
     "ejs": "^3.1.10",
     "epress": "^0.0.1-security",
     "express": "^5.1.0",
-    "mongoose": "^8.19.1"
+    "mongoose": "^8.19.1",
+    "node-localstorage": "^3.0.5"
   },
   "name": "pr-4-mongodb-crud",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "satrt":"node index.js",
-    "dev":"nodemon index.js",
+    "satrt": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
